<resources>
    <!--    Facebook Login-->
    <string name="facebook_app_id">1427832381086515</string>
    <string name="fb_login_protocol_scheme">fb1427832381086515</string>
    <string name="facebook_client_token">8beb2d72d05a566d89d531596a00fa18</string>

    <string name="error_place_holder">Error Happened.Try again!</string>
    <string name="timeout_error">Quá thời gian kết nối máy chủ</string>
    <integer name="activity_anim_duration">300</integer>
    <integer name="activity_anim_duration_out">500</integer>

    <string name="all_login">Đăng nhập</string>
    <string name="all_register">Đăng ký</string>

    <string name="login_registerTextButton">Đăng nhập với %s</string>
    <string name="login_usernameHint">Email/Username</string>
    <string name="login_passwordHint">Password</string>
    <string name="login_forgotPassword">Quên mật khẩu</string>
    <string name="login_ssoTitle">Hoặc đăng nhập qua:</string>
    <string name="login_registerButton"><u>Đăng ký tài khoản</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
